--- a/src/components/css/AboutUs.css
+++ b/src/components/css/AboutUs.css
@@ -80,8 +80,7 @@
   width: 80%;
   height: 250px;
   padding: 3rem;
-  background: rgba(0, 0, 0, 0.75);
-  backdrop-filter: blur(10px);
+  backdrop-filter: blur(15px);
   border-radius: 20px;
   display: flex;
   flex-direction: column;
@@ -113,6 +112,7 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  text-align: justify;
 }
 
 .description-text p {
@@ -122,7 +122,7 @@
   margin: 0;
   letter-spacing: 1px;
   font-family: 'Urbanist';
-
+  text-align: justify;
 }
 
 @media (max-width: 768px) {
@@ -210,6 +210,7 @@
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
   margin-bottom: 3rem;
   animation: fadeInUp 1s ease-out 0.3s backwards;
+  text-align: justify;
 }
 
 .about-description {
@@ -246,6 +247,7 @@
   font-size: 1rem;
   line-height: 1.6;
   font-family: 'Urbanist';
+  text-align: justify;
 }
 
 .button-container {
@@ -319,6 +321,7 @@
   max-width: 600px;
   margin-left: auto;
   margin-right: auto;
+  text-align: justify;
 }
 
 @keyframes fadeInUp {
@@ -359,4 +362,5 @@
   white-space: normal;
   font-family: 'Urbanist';
   letter-spacing: 1px;
+  text-align: justify;
 } 
