--- a/src/components/css/Career.css
+++ b/src/components/css/Career.css
@@ -106,6 +106,11 @@
   font-family: 'Urbanist', sans-serif;
 }
 
+.career-title-section p, .benefit-card p, .cta-content p, .box-content p {
+  text-align: justify;
+
+}
+
 .career-title-section p {
   font-size: 1.1rem;
   line-height: 1.6;
@@ -126,7 +131,7 @@
 
 .benefit-card {
   background: rgba(255, 255, 255, 0.1);
-  backdrop-filter: blur(10px);
+  backdrop-filter: blur(1px);
   border-radius: 15px;
   padding: 30px;
   margin: 20px;
